tests/ui/traits/new-solver/assembly/runaway-impl-candidate-selection.stderr
error[E0282]: type annotations needed
  --> $DIR/runaway-impl-candidate-selection.rs:13:22
   |
LL |     println!("{:?}", iter::<_>());
   |                      ^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `iter`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
